crates/patok-tui/tests/snapshots/ui__pipeline__compact_mode_discovery_rail_with_the_discover_tile_accent.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
      ┌ Builder ──────────────────────────────────────────────────────── 00:00 ┐
 [ P ]│no output yet                                                           │
   ↓  │                                                                        │
 [ B ]│                                                                        │
      │                                                                        │
[ DI ]│                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks                    │
      └────────────────────────────────────────────────────────────────────────┘
      ┌ Tasks | 1/3 - 2 left ──────────────────────────────────────────────────┐
      │✔ T1.1  scaffold the workspace                                          │
      │○ T1.2  add the parser for task files                                   │
      │○ T1.3  wire the engine to the shell                                    │
      │                                                                        │
      │                                                                        │
      └────────────────────────────────────────────────────────────────────────┘
 DISCOVERING  sprint                  ?  settings  t  theme  d  detach  q  quit
