crates/patok-tui/tests/snapshots/ui__pipeline__compact_mode_idle_rail_with_every_tile_muted.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
      ┌ Builder ───────────────────────────────────────────────────────────────┐
 [ R ]│no output yet                                                           │
   ↓  │                                                                        │
 [ P ]│                                                                        │
   ↓  │                                                                        │
 [ B ]│                                                                        │
   ↓  └────────────────────────────────────────────────────────────────────────┘
[ RV ]┌ Tasks | 1/3 - 2 left ──────────────────────────────────────────────────┐
      │✔ T1.1  scaffold the workspace                                          │
[ DI ]│○ T1.2  add the parser for task files                                   │
      │○ T1.3  wire the engine to the shell                                    │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │ a add tasks · i inject task · Enter start build · ↑↓ scroll            │
      └────────────────────────────────────────────────────────────────────────┘
 STOPPED  sprint  Enter  start build  ?  settings  t  theme  d  detach  q  quit
