crates/patok-tui/tests/snapshots/ui__pipeline__compact_mode_planning_rail.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
      ┌ Planner ──────────────────────────────────────────────────────── 00:00 ┐
 [ R ]│no output yet                                                           │
   ↓  │                                                                        │
 [ P ]│                                                                        │
   ↓  │                                                                        │
 [ B ]│                                                                        │
   ↓  │                                                                        │
[ RV ]│                                                                        │
      │                                                                        │
[ DI ]│                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks                    │
      └────────────────────────────────────────────────────────────────────────┘
      ┌ Tasks | 1/3 - 2 left ──────────────────────────────────────────────────┐
      │✔ T1.1  scaffold the workspace                                          │
      │○ T1.2  add the parser for task files                                   │
      │○ T1.3  wire the engine to the shell                                    │
      │                                                                        │
      │                                                                        │
      └────────────────────────────────────────────────────────────────────────┘
 PLANNING  sprint                                             Planner running...
