crates/patok-tui/tests/snapshots/ui__pipeline__compact_mode_running_rail_mid_plan_then_build.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
      ┌ Builder ──────────────────────────────────────────────────────── 00:00 ┐
 [ P ]│── T1.2: add the parser for task files                                  │
   ↓  │                                                                        │
 [ B ]│                                                                        │
      │                                                                        │
[ SH ]│                                                                        │
[ DI ]│                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │                                                                        │
      │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks                    │
      └────────────────────────────────────────────────────────────────────────┘
      ┌ Tasks | 1/3 - 2 left ──────────────────────────────────────────────────┐
      │✔ T1.1  scaffold the workspace                                          │
      │▶ T1.2  add the parser for task files                                   │
      │○ T1.3  wire the engine to the shell                                    │
      │                                                                        │
      │                                                                        │
      └────────────────────────────────────────────────────────────────────────┘
 RUNNING  sprint     Esc  stop build  ?  settings  t  theme  d  detach  q  quit
