crates/patok-tui/tests/snapshots/ui__pipeline__idle_rail_with_every_tile_muted.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
             ┌ Builder ────────────────────────────────────────────────────────┐
[ Research  ]│no output yet                                                    │
      ↓      │                                                                 │
[   Plan    ]│                                                                 │
      ↓      │                                                                 │
[   Build   ]│                                                                 │
      ↓      └─────────────────────────────────────────────────────────────────┘
[  Review   ]┌ Tasks | 1/3 - 2 left ───────────────────────────────────────────┐
             │✔ T1.1  scaffold the workspace                                   │
[   Ship    ]│○ T1.2  add the parser for task files                            │
[ Discover  ]│○ T1.3  wire the engine to the shell                             │
[ Learnings ]│                                                                 │
             │                                                                 │
             │                                                                 │
             │                                                                 │
             │                                                                 │
             │                                                                 │
             │                                                                 │
             │                                                                 │
             │                                                                 │
             │                                                                 │
             │ a add tasks · i inject task · Enter start build · ↑↓ scroll     │
             └─────────────────────────────────────────────────────────────────┘
 STOPPED  sprint  Enter  start build  ?  settings  t  theme  d  detach  q  quit
